@startuml DiagramaClases_PlomerIA
skinparam classAttributeIconSize 0
title Diagrama de clases - PlomerIA (dominio principal)

abstract class PersonaMixin {
  +nombre: str
  +apellido: str
  +email: str
  +password_hash: str
  +genero: str
  +localidad: str
  +latitud: float
  +longitud: float
}

class Usuario {
  +id_usuario: int
  +direccion: str
  +rol: str = "cliente"
  +puntuacion: float = 5.0
  +total_trabajos: int
  +cancelaciones_consecutivas: int
  +suspendido: bool
  +nombre_completo(): str
}

class Plomero {
  +id_plomero: int
  +especialidad: EspecialidadEnum
  +especialidades: list
  +atiende_urgencias: bool
  +matricula_gas: bool
  +disponible_ahora: bool
  +foto_perfil_path: str
  +agenda: JSON
  +puntuacion: float = 5.0
  +total_trabajos: int
  +fecha_registro: datetime
}

class Solicitud {
  +id_solicitud: int
  +descripcion_raw: str
  +diagnostico_ia: str
  +etiqueta_ia: str
  +urgencia_ia: str
  +presupuesto_min: float
  +presupuesto_max: float
  +localidad_evento: str
  +turno_solicitado: str
  +fecha_trabajo: datetime
  +estado: EstadoSolicitud
  +intentos_reasignacion: int
  +fecha_vencimiento_calificacion: datetime
}

class SolicitudPlomero {
  +id: int
  +estado: EstadoInvitacion
  +fecha: datetime
}

class Mensaje {
  +id: int
  +emisor_id: int
  +emisor_rol: str
  +texto: str
  +leido: bool
  +fecha: datetime
}

class Calificacion {
  +id: int
  +autor_rol: str
  +estrellas: float
  +comentario: str
  +fecha_resenia: datetime
}

class MaterialItem {
  +id_item: int
  +descripcion: str
  +cantidad: float
  +precio: float
}

class Notificacion {
  +id_notificacion: int
  +destinatario_id: int
  +destinatario_rol: str
  +tipo: str
  +titulo: str
  +mensaje: str
  +leida: bool
}

class BloqueHorario {
  +id: int
  +inicio: datetime
  +fin: datetime
  +ocupado: bool
}

enum EstadoSolicitud {
  PENDIENTE
  EN_PROGRESO
  EN_CAMINO
  PENDIENTE_CALIFICACION
  COMPLETADA
  CANCELADA
  REASIGNACION_PENDIENTE
  SIN_RESPUESTA
}

enum EstadoInvitacion {
  CONTACTADO
  ACEPTADO
  RECHAZADO
  CANCELADO
}

enum EspecialidadEnum {
  PLOMERIA_GENERAL
  DESTAPES
  GAS_MATRICULADO
  OBRA
}

PersonaMixin <|-- Usuario
PersonaMixin <|-- Plomero

Usuario "1" --> "0..*" Solicitud : crea
Plomero "0..1" --> "0..*" Solicitud : atiende
Solicitud "1" --> "0..*" SolicitudPlomero : invitaciones
Plomero "1" --> "0..*" SolicitudPlomero
Solicitud "1" --> "0..*" Mensaje
Solicitud "1" --> "0..*" Calificacion
Solicitud "1" --> "0..*" MaterialItem : boleta
Plomero "1" --> "0..*" BloqueHorario
Solicitud ..> EstadoSolicitud
SolicitudPlomero ..> EstadoInvitacion
Plomero ..> EspecialidadEnum
Notificacion ..> Usuario
Notificacion ..> Plomero
@enduml
